--- a/Work.html
+++ b/Work.html
@@ -18,8 +18,8 @@
 				<nav>
 					<ul>
 						<li><a href="Contact.html">contact</a></li>
-						<li class="active"><a href="Work.html">work</a></li>
-						<li><a href="index.html">home</a></li>
+						<li class="active"><a href="Work.html">projects</a></li>
+						<li><a href="index.html">about me</a></li>
 
 					</ul>
 				</nav>
