--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link href='http://fonts.googleapis.com/css?family=Roboto:400,500,700,300|Raleway:400,300,500,600,700|Play:400,700|Cuprum:400,700' rel='stylesheet' type='text/css'>
 
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+
 </head>
 <body>
 
@@ -18,8 +20,8 @@
 				<nav>
 					<ul>
 						<li ><a href="Contact.html">contact</a></li>
-						<li><a href="Work.html">work</a></li>
-						<li class="active"><a href="#">home</a></li>
+						<li><a href="Work.html">Projects</a></li>
+						<li class="active"><a href="#">About Me</a></li>
 
 					</ul>
 				</nav>
