--- a/Work.html
+++ b/Work.html
@@ -7,6 +7,10 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link href='http://fonts.googleapis.com/css?family=Roboto:400,500,700,300|Raleway:400,300,500,600,700|Play:400,700|Cuprum:400,700' rel='stylesheet' type='text/css'>
 
+	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+	
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+
 </head>
 <body>
 
