--- a/Contact.html
+++ b/Contact.html
@@ -5,7 +5,7 @@
 	<title>Adam Doyle</title>
 
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link href='http://fonts.googleapis.com/css?family=Roboto:400,500,700,300|Raleway:400,300,500,600,700|Play:400,700|Cuprum:400,700' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Roboto:400,500,700,300|Raleway:400,300,500,600,700|Play:400,700|Cuprum:400,700' rel='stylesheet' type='text/css'>
 
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 	
