added some respnsivness and content

--- a/index.html
+++ b/index.html
@@ -29,6 +29,16 @@
 			</div>
 		</section>
 
+		<div id="designer-container"></div>
+		<div id="designer-content">
+			<p id="designer-title">Web Developer - Entrepreneur - Life Long Learner - Problem Solver</p>
+			
+				<p id="designer-hello">0100100001000101010011000100110001001111, </p>
+				<p id="designer-text">My name is Adam Doyle and I am working towards being a work from home Web Designer.  Please feel free to look at my work.  If you would like to comment on my work or collaborate with me, you can connect with through any of the social links below.  Thanks!</p>
+			
+
+		</div>
+
 
 
 		<div class="content">
