--- a/Contact.html
+++ b/Contact.html
@@ -6,12 +6,9 @@
 
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link href='https://fonts.googleapis.com/css?family=Roboto:400,500,700,300|Raleway:400,300,500,600,700|Play:400,700|Cuprum:400,700' rel='stylesheet' type='text/css'>
-
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-
-	
 
 </head>
 <body>
@@ -24,13 +21,23 @@
 				<nav>
 					<ul>
 						<li class="active"><a href="Contact.html">contact</a></li>
-						<li><a href="Work.html">projects</a></li>
-						<li><a href="index.html">about me</a></li>
+						<li><a href="Work.html">Projects</a></li>
+						<li><a href="index.html">About Me</a></li>
 
 					</ul>
 				</nav>
 			</div>
 		</section>
+
+		<div id="designer-container"></div>
+		<div id="designer-content">
+			<p id="designer-title">Web </p>
+			
+				<p id="designer-hello">01 </p>
+				<p id="designer-text">My !</p>
+			
+
+		</div>
 
 
 
