--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<ul>
 						<li ><a href="Contact.html">contact</a></li>
 						<li><a href="Work.html">Projects</a></li>
-						<li class="active"><a href="#">About Me</a></li>
+						<li class="active"><a href="index.html">About Me</a></li>
 
 					</ul>
 				</nav>
